--- a/content/20170419.md
+++ b/content/20170419.md
@@ -5,18 +5,36 @@ Tags: Fossil, SolveSpace, V-rep
 Slug: 期中考
 Author: 40123158
 
+<h3>(一) Fossil Server 實習查驗</h3>
+<p>各組利用電腦輔助設計室中的電腦, 重新建立一台以 https 為連結協定的 Fossil Server。
+<br>
+<br>而各組員分別在 Wiki 中以 [學號] 期中學習心得 為 Wiki 頁面標題, 概述上課至今的心得與自評成績。
+<br>
+<br>本組 Serve 的 ip 位址 : <a href="https://mde2a2.kmol.info/midterm/bg1/wcontent">https://mde2a2.kmol.info/midterm/bg1/wcontent </a></p>
 <h3>(二) 四連桿機構協同 Trace Point 查驗</h3>
+<p>在各組網誌中, 以子模組 (Github Submodule) 的設定, 擷取各組員倉儲中的 T 點軌跡座標檔後, 進行網際協同繪圖.</p>
+<br> 
 <img src="https://github.com/40123158/2017springcd_hw/blob/gh-pages/data/midterm1.png?raw=true">
+<br> 
 <p>Vimeo影片</p>
 <iframe src="https://player.vimeo.com/video/213775843" width="640" height="346" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <p><a href="https://vimeo.com/213775843">NFU-機械設計系-協同產品設計-40123158 (二)</a> from <a href="https://vimeo.com/user26960874">蔡宗霖</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
-
+<br> 
 <p>youtube影片</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/Xig_FuGB0-c" frameborder="0" allowfullscreen></iframe>
 
 <h3>(三) Fourbar Walker OnShape 零件協同繪圖與組立查驗</h3>
+<p>請各組依照題目給予的基本尺寸規劃, 以協同方式在 OnShape 環境中完成四連桿四足行走機構, 並分別拍攝協同規劃與實際操作影片, 將影片送到 1) Youtube 2) Vimeo 以及各組的 Fossil Server。</p>
+<br> 
+<img src="http://i.imgur.com/ulmpFlS.png">
+<br> 
 <p>Vimeo影片</p>
 <iframe src="https://player.vimeo.com/video/213781620" width="640" height="346" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <p><a href="https://vimeo.com/213781620">NFU-機械設計系-協同產品設計-40123158 (三)</a> from <a href="https://vimeo.com/user26960874">蔡宗霖</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+<br> 
+<p>Vimeo影片 - 機構作動動畫</p>
+<iframe src="https://player.vimeo.com/video/214769406" width="640" height="347" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<p><a href="https://vimeo.com/214769406">NFU-機械設計系-協同產品設計-40123158 (三 - 機構作動動畫)</a> from <a href="https://vimeo.com/user26960874">蔡宗霖</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+<br> 
 <p>youtube影片</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/tcW-I39wq1k" frameborder="0" allowfullscreen></iframe>
