--- a/content/20170419.md
+++ b/content/20170419.md
@@ -11,25 +11,26 @@ Author: 40123158
 <br>而各組員分別在 Wiki 中以 [學號] 期中學習心得 為 Wiki 頁面標題, 概述上課至今的心得與自評成績。
 <br>
 <br>本組 Serve 的 ip 位址 : <a href="https://mde2a2.kmol.info/midterm/bg1/wcontent">https://mde2a2.kmol.info/midterm/bg1/wcontent </a></p>
+<br> 
 <h3>(二) 四連桿機構協同 Trace Point 查驗</h3>
 <p>在各組網誌中, 以子模組 (Github Submodule) 的設定, 擷取各組員倉儲中的 T 點軌跡座標檔後, 進行網際協同繪圖.</p>
-<br> 
-<img src="https://github.com/40123158/2017springcd_hw/blob/gh-pages/data/midterm1.png?raw=true">
+<p><img src="https://github.com/40123158/2017springcd_hw/blob/gh-pages/data/midterm1.png?raw=true"></p>
 <br> 
 <p>Vimeo影片</p>
-<iframe src="https://player.vimeo.com/video/213775843" width="640" height="346" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<iframe src="https://player.vimeo.com/video/213775843" width="640" height="347" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <p><a href="https://vimeo.com/213775843">NFU-機械設計系-協同產品設計-40123158 (二)</a> from <a href="https://vimeo.com/user26960874">蔡宗霖</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 <br> 
 <p>youtube影片</p>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/Xig_FuGB0-c" frameborder="0" allowfullscreen></iframe>
-
-<h3>(三) Fourbar Walker OnShape 零件協同繪圖與組立查驗</h3>
-<p>請各組依照題目給予的基本尺寸規劃, 以協同方式在 OnShape 環境中完成四連桿四足行走機構, 並分別拍攝協同規劃與實際操作影片, 將影片送到 1) Youtube 2) Vimeo 以及各組的 Fossil Server。</p>
+<p><iframe width="640" height="347" src="https://www.youtube.com/embed/Xig_FuGB0-c" frameborder="0" allowfullscreen></iframe></p>
 <br> 
-<img src="http://i.imgur.com/ulmpFlS.png">
+<h3>(三) Fourbar Walker OnShape 零件協同繪圖與組立查驗</h3>
+<p>請各組依照題目給予的基本尺寸規劃, 以協同方式在 OnShape 環境中完成四連桿四足行走機構, 
+<br> 
+<br>並分別拍攝協同規劃與實際操作影片, 將影片送到 1) Youtube 2) Vimeo 以及各組的 Fossil Server。</p>
+<p><img src="http://i.imgur.com/ulmpFlS.png"></p>
 <br> 
 <p>Vimeo影片</p>
-<iframe src="https://player.vimeo.com/video/213781620" width="640" height="346" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<iframe src="https://player.vimeo.com/video/213781620" width="640" height="347" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <p><a href="https://vimeo.com/213781620">NFU-機械設計系-協同產品設計-40123158 (三)</a> from <a href="https://vimeo.com/user26960874">蔡宗霖</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 <br> 
 <p>Vimeo影片 - 機構作動動畫</p>
@@ -37,4 +38,12 @@ Author: 40123158
 <p><a href="https://vimeo.com/214769406">NFU-機械設計系-協同產品設計-40123158 (三 - 機構作動動畫)</a> from <a href="https://vimeo.com/user26960874">蔡宗霖</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 <br> 
 <p>youtube影片</p>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/tcW-I39wq1k" frameborder="0" allowfullscreen></iframe>
+<iframe width="640" height="347" src="https://www.youtube.com/embed/tcW-I39wq1k" frameborder="0" allowfullscreen></iframe></p>
+<br> 
+<p>youtube影片 - 機構作動動畫</p>
+<iframe width="640" height="347" src="https://www.youtube.com/embed/6-aSEW_Woyg" frameborder="0" allowfullscreen></iframe></p>
+<br> 
+<h3>(四) 分組協同零件展示</h3>
+<p>將以所指定的 Ethercalc 即時表單, 取各學員的期中自評成績。
+<br>
+<br>將各組完成的四足行走機構, 轉為 STL 格式, 利用下列 viewer, 將機構展示在各組的網誌中。</p>
