--- a/content/20170503.md
+++ b/content/20170503.md
@@ -4,3 +4,22 @@ Category: Course
 Tags: Fossil, SolveSpace, V-rep
 Slug: Week11
 Author: 40123158
+
+<h3>正齒輪繪製</h3>
+<p>利用onshape來繪製 " 漸近線正齒輪 "
+<p><img src="https://github.com/40123158/2017springcd_hw/blob/gh-pages/photo/received_1364718136946445.png?raw=true"></p>
+<br> 
+<p><img src="https://github.com/40123158/2017springcd_hw/blob/gh-pages/photo/received_1364718133613112.png?raw=true"></p>
+<br> 
+<p><img src="https://github.com/40123158/2017springcd_hw/blob/gh-pages/photo/received_1364718126946446.png?raw=true"></p>
+<br> 
+<p><img src="https://github.com/40123158/2017springcd_hw/blob/gh-pages/photo/received_1364718140279778.png?raw=true"></p>
+<br> 
+<p><img src="https://github.com/40123158/2017springcd_hw/blob/gh-pages/photo/received_1364718143613111.png?raw=true"></p>
+<br> 
+<p><img src="https://github.com/40123158/2017springcd_hw/blob/gh-pages/photo/received_1364718146946444.png?raw=true"></p>
+<br>
+<p><img src="https://github.com/40123158/2017springcd_hw/blob/gh-pages/photo/received_1364718123613113.png?raw=true"></p>
+<br>
+<p><img src="https://github.com/40123158/2017springcd_hw/blob/gh-pages/photo/received_1364718130279779.png?raw=true"></p>
+<br>
