--- a/content/20170510.md
+++ b/content/20170510.md
@@ -4,3 +4,9 @@ Category: Course
 Tags: Fossil, SolveSpace, V-rep
 Slug: Week12
 Author: 40123158
+
+<h3>正齒輪繪製</h3>
+<p>利用onshape來繪製 " 齒輪輪系 "
+<br> 
+<p><img src="https://github.com/40123158/2017springcd_hw/blob/gh-pages/photo/%E8%BC%AA%E7%B3%BB.PNG?raw=true"></p>
+<br> 
