--- a/content/20170517.md
+++ b/content/20170517.md
@@ -4,3 +4,17 @@ Category: Course
 Tags: Fossil, SolveSpace, V-rep
 Slug: Week13
 Author: 40123158
+
+<h3>正齒輪繪製</h3>
+<p>利用onshape來繪製 " 齒輪輪系 " 並 "轉動 "
+<br>
+<p><img src="https://github.com/40123158/2017springcd_hw/blob/gh-pages/photo/%E8%BD%89%E5%8B%95.PNG?raw=true"></p>
+<br> 
+<p>Vimeo影片</p>
+<iframe src="https://player.vimeo.com/video/219617290" width="640" height="480" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<p><a href="https://vimeo.com/219617290">國立虎尾科技大學-機械設計系-協同產品設計實習-40123158  (正齒輪系測試)</a> from <a href="https://vimeo.com/user26960874">蔡宗霖</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+<br> 
+<p>youtube影片</p>
+<p><iframe width="560" height="315" src="https://www.youtube.com/embed/Fh1IyrA0oOg" frameborder="0" allowfullscreen></iframe></p>
+<br> 
+ 
