--- a/content/20170614.md
+++ b/content/20170614.md
@@ -13,6 +13,8 @@ Author: 40123158
 <br>
 <h3>2.各組員網誌上的 2D 繪圖, 並將程式碼顯示在繪圖網誌文章中</h3>
 <br>
+<p><img src="https://github.com/40123158/2017springcd_hw/blob/gh-pages/Solvespace/40123158.PNG?raw=true"></p>
+<br> 
 <pre class="brush:python">
 ѲԓolveSpaceREVa
 
